update product endpoint added
